SubVersion: $Id$

Log:

- 18/09/2004, version 4.5.4: roms
	Added TI89 Titanium support. File format seems to be the same as TI89.
	Added TI84+ (SE) support. File format seems to be the same as TI83+.

- 08/04/2004, version 4.5.3: roms
	Redirection of stdout/stderr.
	Fixed problem of i18n support: AM_GNU_GETTEXT must be put before
	any libs checking.

- 20/03/2004, version 4.5.2: roms
	Added tree management (hacked from GLib) for internal use.
	This way removes GLib dependancies as well as multiple llibraries
	version (GLib 1.2 & 2.0).
	Added endianess check in configure for Mac OS.
	Tested with TiEmu: ok (backward compatible).
	Tested with TiLP: ok (need latest lib).
	Bug fix in tixx_directorylist2 (XXXX_NODE_NAME was not duplicated 
	by malloc). This is the reason why dirlist v1=>2 was buggy !
	
- 27/08/2003, version 4.5.1: Maintenance release by JB.
	Upgraded to libtool 1.5
	Upgraded to automake 1.7
	Fixed src12/Makefile.am

- 10/05/2003, version 4.5.0:
	Variable name is now translated for all calcs (charsets and tokens).
	
- 15/04/2003, version 4.4.9:
	Added is_flash field (for consistency).
	
- 12/04/2003, version 4.4.8:
	Changed src20 to src.
	
- 30/03/2003, version 4.4.7:
	i18n updated.
	Included French translations.
	Code source parsed for _() occurences.
	i18n enabled for Windows.
	indent -kr -i2
	
- 21/03/2003, version 4.4.6:
	Configure script modified for various GLib supports.
	Glib1.2: src12 -> libticalcs.so.4.4.6
	Glib2: src20 -> libticalcs-4.so.0.4.6 (0 is the ABI major).
	Note: src12 & src20 contains the same files, except for Makefile.*.
	
- 18/03/2003, version 4.4.5 (testing phase):
	Added missing update_refresh() calls into ti82/85 support.
	Bug fix in ticalc_dirlist_numvars (introduced in 4.4.3).
	Clock functions (void) was missing -> segfault.
	Fixed 'content->calc_type = CALC_TI??' to 
	  'content->calc_type = ticalcs_calc_type;'
	Added varname translation in sending var for the label.