@@ -1,128 +1,152 @@
-/*
-  This file comes from the Rusty Wagner's VTi
-*/
-/*
-	Program name: main/dumprom()
-*/
-/*
-  Note: the code below comes from my DSK transmission analyzer. It seems that 
-  code sent by VTi and code from the rom89.h file are not the same and 
-  the second one crashes the calculator !
-*/
-static unsigned char romDump89[] = {
-  0x2A, 0x2A, 0x54, 0x49, 0x38, 0x39, 0x2A, 0x2A, 0x01, 0x00, 0x6D,
-  0x61, 0x69,
-  0x6E, 0x00, 0x8B, 0x76, 0x0A, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-  0x00, 0x00,
-  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-  0x00, 0x00,
-  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-  0x00, 0x00,
-  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x01, 0x00, 0x52, 0x00, 0x00,
-  0x00, 0x64,
-  0x75, 0x6D, 0x70, 0x72, 0x6F, 0x6D, 0x00, 0x21, 0x00, 0x00, 0x00,
-  0xE7, 0x08,
-  0x00, 0x00, 0xA5, 0x5A,
+/* Hey EMACS -*- linux-c -*- */
+/* $Id$ */
 
-  0x00, 0x00, 0x00, 0x00, 0x02, 0xF7, 0x48, 0xE7, 0xFF, 0xFE, 0x4B,
-  0xFA, 0x01,
-  0xD4, 0x4E, 0x95, 0x4C, 0xDF, 0x7F, 0xFF, 0x4E, 0x75, 0x20, 0x2F,
-  0x00, 0x08, 0xC1, 0xEF, 0x00,
-  0x06, 0x48, 0xC0, 0x4E, 0x75, 0x20, 0x2F, 0x00, 0x08, 0xC0, 0xEF,
-  0x00, 0x06, 0x48, 0xC0, 0x4E,
-  0x75, 0x20, 0x2F, 0x00, 0x04, 0x22, 0x2F, 0x00, 0x08, 0x4E, 0xB9,
-  0x00, 0x00, 0x00, 0x00, 0x20,
-  0x01, 0x4E, 0x75, 0x20, 0x2F, 0x00, 0x04, 0x22, 0x2F, 0x00, 0x08,
-  0x4E, 0xB9, 0x00, 0x00, 0x00,
-  0x00, 0x20, 0x01, 0x4E, 0x75, 0x20, 0x2F, 0x00, 0x04, 0x22, 0x2F,
-  0x00, 0x08, 0x4E, 0xB9, 0x00,
-  0x00, 0x00, 0x00, 0x20, 0x01, 0x4E, 0x75, 0x20, 0x2F, 0x00, 0x04,
-  0x22, 0x2F, 0x00, 0x08, 0x4E,
-  0xB9, 0x00, 0x00, 0x00, 0x00, 0x20, 0x01, 0x4E, 0x75, 0x4E, 0x56,
-  0x00, 0x00, 0x60, 0x00, 0x00,
-  0x02, 0x3F, 0x3C, 0x00, 0x01, 0x41, 0xEE, 0x00, 0x0B, 0x2F, 0x08,
-  0x28, 0x78, 0x00, 0xC8, 0xD9,
-  0xFC, 0x00, 0x00, 0x09, 0x40, 0x28, 0x54, 0x4E, 0x94, 0x5C, 0x4F,
-  0x4A, 0x00, 0x66, 0xE2, 0x70,
-  0x01, 0x4E, 0x5E, 0x4E, 0x75, 0x4E, 0x56, 0xFF, 0xFC, 0x60, 0x00,
-  0x00, 0x26, 0x3F, 0x3C, 0x00,
-  0x01, 0x41, 0xEE, 0xFF, 0xFF, 0x2F, 0x08, 0x28, 0x78, 0x00, 0xC8,
-  0xD9, 0xFC, 0x00, 0x00, 0x09,
-  0x3C, 0x28, 0x54, 0x4E, 0x94, 0x5C, 0x4F, 0x4A, 0x80, 0x67, 0x00,
-  0x00, 0x06, 0x60, 0x00, 0x00,
-  0x04, 0x60, 0xDA, 0x10, 0x2E, 0xFF, 0xFF, 0x4E, 0x5E, 0x4E, 0x75,
-  0x4E, 0x56, 0x00, 0x00, 0x48,
-  0xE7, 0x1F, 0x00, 0x41, 0xFA, 0xFF, 0x94, 0x2C, 0x08, 0x60, 0x00,
-  0x00, 0xBA, 0x78, 0x00, 0x76,
-  0x00, 0x60, 0x00, 0x00, 0x2A, 0x20, 0x6E, 0x00, 0x08, 0x1E, 0x30,
-  0x48, 0x00, 0x02, 0x47, 0x00,
-  0xFF, 0x2F, 0x07, 0x20, 0x46, 0x4E, 0x90, 0x58, 0x4F, 0x4A, 0x80,
-  0x66, 0x00, 0x00, 0x08, 0x70,
-  0x00, 0x60, 0x00, 0x00, 0x98, 0x02, 0x47, 0x00, 0xFF, 0xD6, 0x47,
-  0x52, 0x84, 0x20, 0x04, 0x0C,
-  0x80, 0x00, 0x00, 0x04, 0x00, 0x6D, 0xCE, 0x02, 0x83, 0x00, 0x00,
-  0xFF, 0xFF, 0x20, 0x03, 0xE0,
-  0x80, 0x02, 0x40, 0x00, 0xFF, 0x2F, 0x00, 0x20, 0x46, 0x4E, 0x90,
-  0x58, 0x4F, 0x4A, 0x80, 0x66,
-  0x00, 0x00, 0x08, 0x70, 0x00, 0x60, 0x00, 0x00, 0x64, 0x02, 0x83,
-  0x00, 0x00, 0xFF, 0xFF, 0x20,
-  0x03, 0x02, 0x80, 0x00, 0x00, 0x00, 0xFF, 0x02, 0x40, 0x00, 0xFF,
-  0x2F, 0x00, 0x20, 0x46, 0x4E,
-  0x90, 0x58, 0x4F, 0x4A, 0x80, 0x66, 0x00, 0x00, 0x08, 0x70, 0x00,
-  0x60, 0x00, 0x00, 0x3E, 0x4B,
-  0xFA, 0xFF, 0x34, 0x4E, 0x95, 0x1A, 0x00, 0x02, 0x85, 0x00, 0x00,
-  0x00, 0xFF, 0x20, 0x05, 0x0C,
-  0x80, 0x00, 0x00, 0x00, 0xDA, 0x66, 0x00, 0x00, 0x06, 0x60, 0x00,
-  0x00, 0x1E, 0x02, 0x85, 0x00,
-  0x00, 0x00, 0xFF, 0x20, 0x05, 0x0C, 0x80, 0x00, 0x00, 0x00, 0xCC,
-  0x66, 0x00, 0x00, 0x08, 0x70,
-  0x00, 0x60, 0x00, 0x00, 0x08, 0x60, 0x00, 0xFF, 0x46, 0x70, 0x01,
-  0x4C, 0xDF, 0x00, 0xF8, 0x4E,
-  0x5E, 0x4E, 0x75, 0x48, 0xE7, 0x10, 0x20, 0x34, 0x7C, 0x4C, 0x00,
-  0x76, 0x00, 0x60, 0x00, 0x00,
-  0x06, 0x42, 0x9A, 0x52, 0x83, 0x20, 0x03, 0x0C, 0x80, 0x00, 0x00,
-  0x03, 0xC0, 0x6D, 0xF2, 0x4C,
-  0xDF, 0x04, 0x08, 0x4E, 0x75, 0x25, 0x6C, 0x64, 0x4B, 0x20, 0x6F,
-  0x66, 0x20, 0x32, 0x30, 0x34,
-  0x38, 0x4B, 0x00, 0x4E, 0x56, 0xFF, 0xE8, 0x48, 0xE7, 0x1C, 0x00,
-  0x41, 0xEE, 0xFF, 0xE8, 0x2A,
-  0x08, 0x20, 0x38, 0x00, 0x04, 0x02, 0x80, 0x00, 0x60, 0x00, 0x00,
-  0x28, 0x00, 0x4B, 0xFA, 0xFF,
-  0xB4, 0x4E, 0x95, 0x3F, 0x3C, 0x00, 0x02, 0x28, 0x78, 0x00, 0xC8,
-  0xD9, 0xFC, 0x00, 0x00, 0x06,
-  0x3C, 0x28, 0x54, 0x4E, 0x94, 0x54, 0x4F, 0x76, 0x00, 0x60, 0x00,
-  0x00, 0xCC, 0x20, 0x03, 0xE0,
-  0x80, 0xE4, 0x80, 0x2F, 0x00, 0x48, 0x7A, 0xFF, 0xAE, 0x2F, 0x05,
-  0x28, 0x78, 0x00, 0xC8, 0xD9,
-  0xFC, 0x00, 0x00, 0x01, 0x4C, 0x28, 0x54, 0x4E, 0x94, 0x4F, 0xEF,
-  0x00, 0x0C, 0x20, 0x38, 0x00,
-  0x04, 0x02, 0x80, 0x00, 0x40, 0x00, 0x00, 0x66, 0x00, 0x00, 0x42,
-  0x3F, 0x3C, 0x00, 0x04, 0x2F,
-  0x05, 0x3F, 0x3C, 0x00, 0x2D, 0x70, 0x50, 0x2F, 0x00, 0x2F, 0x05,
-  0x28, 0x78, 0x00, 0xC8, 0xD9,
-  0xFC, 0x00, 0x00, 0x09, 0xF8, 0x28, 0x54, 0x4E, 0x94, 0x58, 0x4F,
-  0x22, 0x00, 0x20, 0x1F, 0xE5,
-  0x89, 0x90, 0x81, 0x3F, 0x00, 0x28, 0x78, 0x00, 0xC8, 0xD9, 0xFC,
-  0x00, 0x00, 0x06, 0xA4, 0x28,
-  0x54, 0x4E, 0x94, 0x4F, 0xEF, 0x00, 0x0A, 0x60, 0x00, 0x00, 0x3E,
-  0x3F, 0x3C, 0x00, 0x04, 0x2F,
-  0x05, 0x3F, 0x3C, 0x00, 0x3B, 0x70, 0x78, 0x2F, 0x00, 0x2F, 0x05,
-  0x28, 0x78, 0x00, 0xC8, 0xD9,
-  0xFC, 0x00, 0x00, 0x09, 0xF8, 0x28, 0x54, 0x4E, 0x94, 0x58, 0x4F,
-  0x22, 0x00, 0x20, 0x1F, 0xE5,
-  0x89, 0x90, 0x81, 0x3F, 0x00, 0x28, 0x78, 0x00, 0xC8, 0xD9, 0xFC,
-  0x00, 0x00, 0x06, 0xA4, 0x28,
-  0x54, 0x4E, 0x94, 0x4F, 0xEF, 0x00, 0x0A, 0x2F, 0x04, 0x4B, 0xFA,
-  0xFE, 0x10, 0x4E, 0x95, 0x58,
-  0x4F, 0x4A, 0x80, 0x66, 0x00, 0x00, 0x06, 0x60, 0x00, 0x00, 0x1A,
-  0x06, 0x83, 0x00, 0x00, 0x04,
-  0x00, 0x06, 0x84, 0x00, 0x00, 0x04, 0x00, 0x20, 0x03, 0x0C, 0x80,
-  0x00, 0x20, 0x00, 0x00, 0x6D,
-  0x00, 0xFF, 0x2C, 0x4C, 0xDF, 0x00, 0x38, 0x4E, 0x5E, 0x4E, 0x75,
-  0x4E, 0x71, 0x00, 0x00, 0xF3,
-  0xBC, 0xD6
+/*  libticalcs - Ti Calculator library, a part of the TiLP project
+ *  Copyright (C) 1999-2004  Romain Lievin
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ */
+
+/*
+  This header contains a TI89/TI92+/V200/TI89 Titanium ROM dumper.
+*/
+
+static unsigned char romDump89[] = {
+0x2a, 0x2a, 0x54, 0x49, 0x38, 0x39, 0x2a, 0x2a, 
+0x01, 0x00, 0x6d, 0x61, 0x69, 0x6e, 0x00, 0x00, 
+0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+0x00, 0x00, 0x01, 0x00, 0x52, 0x00, 0x00, 0x00, 
+0x72, 0x6f, 0x6d, 0x64, 0x75, 0x6d, 0x70, 0x00, 
+0x21, 0x00, 0x00, 0x00, 0x97, 0x03, 0x00, 0x00, 
+0xa5, 0x5a, 0x00, 0x00, 0x00, 0x00, 0x03, 0x3d, 
+0x20, 0x78, 0x00, 0xc8, 0x70, 0x01, 0x22, 0x08, 
+0x02, 0x81, 0x00, 0x40, 0x00, 0x00, 0x66, 0x10, 
+0x42, 0x40, 0x22, 0x68, 0x00, 0xbc, 0x0c, 0x29, 
+0x00, 0xc8, 0x00, 0x02, 0x65, 0x02, 0x70, 0x03, 
+0x43, 0xfa, 0x00, 0x4e, 0x32, 0x80, 0x0c, 0xa8, 
+0x00, 0x00, 0x03, 0xe8, 0xff, 0xfc, 0x64, 0x0e, 
+0x48, 0x7a, 0x00, 0x40, 0x20, 0x68, 0x03, 0x98, 
+0x4e, 0x90, 0x58, 0x8f, 0x4e, 0x75, 0x48, 0x52, 
+0x4f, 0xef, 0xf1, 0x00, 0x48, 0x78, 0x0f, 0x00, 
+0x48, 0x78, 0x4c, 0x00, 0x48, 0x6f, 0x00, 0x08, 
+0x24, 0x68, 0x09, 0xa8, 0x4e, 0x92, 0x61, 0x00, 
+0x01, 0x12, 0x48, 0x78, 0x0f, 0x00, 0x48, 0x6f, 
+0x00, 0x10, 0x48, 0x78, 0x4c, 0x00, 0x4e, 0x92, 
+0x4f, 0xef, 0x0f, 0x18, 0x24, 0x5f, 0x4e, 0x75, 
+0xff, 0xff, 0x41, 0x4d, 0x53, 0x20, 0x32, 0x2e, 
+0x30, 0x30, 0x20, 0x6f, 0x72, 0x20, 0x68, 0x69, 
+0x67, 0x68, 0x65, 0x72, 0x20, 0x6e, 0x65, 0x65, 
+0x64, 0x65, 0x64, 0x00, 0x4e, 0x56, 0x00, 0x00, 
+0x20, 0x78, 0x00, 0xc8, 0x3f, 0x3c, 0x00, 0x01, 
+0x48, 0x6e, 0x00, 0x09, 0x20, 0x68, 0x09, 0x40, 
+0x4e, 0x90, 0x5c, 0x8f, 0x4a, 0x40, 0x66, 0xe8, 
+0x70, 0x01, 0x4e, 0x5e, 0x4e, 0x75, 0x4e, 0x56, 
+0x00, 0x00, 0x2f, 0x03, 0x26, 0x2e, 0x00, 0x08, 
+0x20, 0x78, 0x00, 0xc8, 0x3f, 0x3c, 0x00, 0x01, 
+0x2f, 0x03, 0x20, 0x68, 0x09, 0x3c, 0x4e, 0x90, 
+0x5c, 0x8f, 0x4a, 0x40, 0x67, 0xea, 0x70, 0x01, 
+0x26, 0x2e, 0xff, 0xfc, 0x4e, 0x5e, 0x4e, 0x75, 
+0x4e, 0x56, 0xff, 0xfc, 0x48, 0xe7, 0x1f, 0x30, 
+0x2e, 0x2e, 0x00, 0x08, 0x42, 0x46, 0x42, 0x44, 
+0x42, 0x45, 0x24, 0x47, 0x60, 0x1c, 0x16, 0x12, 
+0x55, 0x8f, 0x1f, 0x43, 0x00, 0x01, 0x4e, 0x93, 
+0x54, 0x8f, 0x42, 0x41, 0x4a, 0x40, 0x67, 0x5e, 
+0x42, 0x40, 0x10, 0x03, 0xda, 0x40, 0x52, 0x44, 
+0x52, 0x8a, 0x47, 0xfa, 0xff, 0x80, 0x0c, 0x44, 
+0x03, 0xff, 0x6f, 0xda, 0x30, 0x05, 0xe0, 0x48, 
+0x55, 0x8f, 0x1f, 0x40, 0x00, 0x01, 0x4e, 0x93, 
+0x54, 0x8f, 0x42, 0x41, 0x4a, 0x40, 0x67, 0x36, 
+0x55, 0x8f, 0x1f, 0x45, 0x00, 0x01, 0x4e, 0x93, 
+0x54, 0x8f, 0x42, 0x41, 0x4a, 0x40, 0x67, 0x26, 
+0x48, 0x6e, 0xff, 0xff, 0x61, 0x00, 0xff, 0x70, 
+0x58, 0x8f, 0x42, 0x41, 0x4a, 0x40, 0x67, 0x16, 
+0x0c, 0x2e, 0xff, 0xda, 0xff, 0xff, 0x67, 0x0c, 
+0x30, 0x06, 0x52, 0x46, 0x0c, 0x40, 0x00, 0x02, 
+0x6e, 0x04, 0x60, 0x8a, 0x72, 0x01, 0x30, 0x01, 
+0x4c, 0xee, 0x0c, 0xf8, 0xff, 0xe0, 0x4e, 0x5e, 
+0x4e, 0x75, 0x4e, 0x56, 0xff, 0xe0, 0x48, 0xe7, 
+0x1c, 0x30, 0x42, 0x41, 0x0c, 0x79, 0x00, 0x03, 
+0x00, 0x00, 0x00, 0x00, 0x67, 0x12, 0x20, 0x38, 
+0x00, 0xc8, 0x02, 0x80, 0x00, 0xe0, 0x00, 0x00, 
+0x0c, 0x80, 0x00, 0x80, 0x00, 0x00, 0x66, 0x02, 
+0x72, 0x01, 0x30, 0x01, 0x48, 0xc0, 0x7a, 0x20, 
+0x48, 0x45, 0xe1, 0xad, 0x20, 0x38, 0x00, 0xc8, 
+0x26, 0x00, 0x02, 0x83, 0x00, 0xe0, 0x00, 0x00, 
+0x22, 0x40, 0x20, 0x69, 0x06, 0x78, 0x4e, 0x90, 
+0x20, 0x78, 0x00, 0xc8, 0x3f, 0x3c, 0x00, 0x02, 
+0x20, 0x68, 0x06, 0x3c, 0x4e, 0x90, 0x20, 0x78, 
+0x00, 0xc8, 0x20, 0x68, 0x01, 0x4c, 0x48, 0x7a, 
+0x00, 0xf6, 0x48, 0x7a, 0x00, 0xf7, 0x47, 0xee, 
+0xff, 0xe2, 0x2f, 0x0b, 0x4e, 0x90, 0x20, 0x78, 
+0x00, 0xc8, 0x3f, 0x3c, 0x00, 0x01, 0x2f, 0x0b, 
+0x42, 0x67, 0x42, 0x67, 0x20, 0x68, 0x06, 0xa4, 
+0x4e, 0x90, 0x20, 0x78, 0x00, 0xc8, 0x24, 0x68, 
+0x01, 0x4c, 0x61, 0x00, 0x01, 0x08, 0x3f, 0x00, 
+0x48, 0x7a, 0x00, 0xd7, 0x2f, 0x0b, 0x4e, 0x92, 
+0x4f, 0xef, 0x00, 0x22, 0x20, 0x78, 0x00, 0xc8, 
+0x3f, 0x3c, 0x00, 0x01, 0x2f, 0x0b, 0x3f, 0x3c, 
+0x00, 0x14, 0x42, 0x67, 0x20, 0x68, 0x06, 0xa4, 
+0x4e, 0x90, 0x20, 0x78, 0x00, 0xc8, 0x20, 0x68, 
+0x01, 0x4c, 0x2f, 0x03, 0x48, 0x7a, 0x00, 0xb6, 
+0x2f, 0x0b, 0x4e, 0x90, 0x20, 0x78, 0x00, 0xc8, 
+0x3f, 0x3c, 0x00, 0x01, 0x2f, 0x0b, 0x3f, 0x3c, 
+0x00, 0x28, 0x42, 0x67, 0x20, 0x68, 0x06, 0xa4, 
+0x4e, 0x90, 0x78, 0x00, 0x4f, 0xef, 0x00, 0x20, 
+0x60, 0x66, 0x20, 0x78, 0x00, 0xc8, 0x20, 0x68, 
+0x01, 0x4c, 0x20, 0x05, 0x72, 0x0a, 0xe2, 0xa8, 
+0x2f, 0x00, 0x20, 0x04, 0xe2, 0xa8, 0x2f, 0x00, 
+0x48, 0x7a, 0x00, 0x8a, 0x2f, 0x0b, 0x4e, 0x90, 
+0x4f, 0xef, 0x00, 0x10, 0x30, 0x3a, 0xfe, 0x02, 
+0x67, 0x0c, 0x0c, 0x40, 0x00, 0x01, 0x67, 0x06, 
+0x0c, 0x40, 0x00, 0x03, 0x66, 0x1a, 0x20, 0x78, 
+0x00, 0xc8, 0x3f, 0x3c, 0x00, 0x04, 0x2f, 0x0b, 
+0x3f, 0x3c, 0x00, 0x3c, 0x42, 0x67, 0x20, 0x68, 
+0x06, 0xa4, 0x4e, 0x90, 0x4f, 0xef, 0x00, 0x0a, 
+0x2f, 0x03, 0x61, 0x00, 0xfe, 0x3c, 0x58, 0x8f, 
+0x4a, 0x40, 0x67, 0x10, 0x06, 0x84, 0x00, 0x00, 
+0x04, 0x00, 0x06, 0x83, 0x00, 0x00, 0x04, 0x00, 
+0xba, 0x84, 0x62, 0x96, 0x4c, 0xee, 0x0c, 0x38, 
+0xff, 0xcc, 0x4e, 0x5e, 0x4e, 0x75, 0x31, 0x2e, 
+0x30, 0x30, 0x00, 0x52, 0x6f, 0x6d, 0x44, 0x75, 
+0x6d, 0x70, 0x65, 0x72, 0x20, 0x76, 0x25, 0x73, 
+0x00, 0x54, 0x79, 0x70, 0x65, 0x3a, 0x20, 0x48, 
+0x57, 0x25, 0x69, 0x00, 0x52, 0x4f, 0x4d, 0x20, 
+0x62, 0x61, 0x73, 0x65, 0x3a, 0x20, 0x30, 0x78, 
+0x25, 0x6c, 0x78, 0x00, 0x44, 0x6f, 0x6e, 0x65, 
+0x3a, 0x20, 0x25, 0x6c, 0x64, 0x2f, 0x25, 0x6c, 
+0x64, 0x4b, 0x42, 0x00, 0x20, 0x38, 0x00, 0xc8, 
+0x02, 0x80, 0x00, 0xe0, 0x00, 0x00, 0x20, 0x40, 
+0x22, 0x68, 0x01, 0x04, 0xd1, 0xfc, 0x00, 0x01, 
+0x00, 0x00, 0xb3, 0xc8, 0x64, 0x16, 0x0c, 0x51, 
+0x00, 0x16, 0x63, 0x10, 0x4e, 0x4c, 0x46, 0xfc, 
+0x30, 0x00, 0x40, 0xc1, 0x46, 0xc0, 0x08, 0x01, 
+0x00, 0x0c, 0x67, 0x04, 0x70, 0x01, 0x4e, 0x75, 
+0x20, 0x29, 0x00, 0x16, 0x4e, 0x75, 0x00, 0x00, 
+0x00, 0x70, 0x01, 0x78, 0xf3, 0x9f, 0xf4, 
 };
-static int romDumpSize89 = 853;
+static int romDumpSize89 = 919;
 
 #define romDump92p		romDump89
 #define romDumpSize92p	romDumpSize89
+
+#define romDumpV2		romDump89
+#define romDumpSizeV2	romDumpSize89
+
+#define romDump89t		romDump89
+#define romDumpSize89t	romDumpSize89
